# neretva

./: LICENSE  README.md  cn_estimator.py  common_0620B.py  common_cyp.py  coverage.py  coverage_CN.py  cyp.py  cyp2c8.csv  cyp2c8.pkl  cyp2c9.pkl  cyp2d6.py  cyp3a5.pkl  cyp4f2.pkl  eval_CYP.sh  helper.py  kir.py  kir_bias_ablation.py  kir_entropy_ablation.py  kir_ilp_ablation.py  kir_jsd_ablation.py  neretva.py  pyproject.toml  requirements.txt  translate.py  vae.py  vae_CN.py  vae_bias_ablation.py  vae_cyp_B.py  vae_cyp_B2.py  vae_cyp_B3.py  vae_cyp_B4.py  vae_cyp_helper.py  vae_entropy_ablation.py  vae_helper.py  vae_jsd_ablation.py
Experiments/: experiment.ipynb
Experiments/Scripts/: make_kir_table.py  mark_allele_level.py  mark_allele_level_CYP.py  mark_sample_level.py  mark_sample_level_CYP.py
Experiments/Sheets/: HPRC_sheet.csv  KIR_CYP_marked.csv  KIR_per_gene_break_down.tex
ablation/: ilp.py  kir_entropy_ablation.py  kir_ilp_ablation.py
core/: common.py  vae.py  vae_cyp_B4.py  vae_jsd_ablation.py
data/: cyp2b6.pkl
experiments/: experiment.ipynb
experiments/Scripts/: database.py  make_cyp_table.py  mark_allele_level.py  mark_allele_level_CYP.py  mark_gene.py  mark_sample_level_CYP.py
experiments/Sheets/: compiled_results.csv  cyp_results_original.csv
experiments/ablation/: kir_jsd_ablation.py
experiments/ground-truth/: cyp_ground.csv
neretva/: __main__.py  common_0620B.py  cyp.py  kir.py
neretva/core/: vae_cyp.py  vae_entropy_ablation.py
neretva/data/: cyp2c19.pkl
neretva/sample/: test.fa
scripts/: eval_CYP.sh
(+22660 files in other folders)
